# chacha20-hash-lightweight-cryptographic-hash-function-based-on-chacha20

./: .gitignore  README.md  main.py  pyproject.toml
src/app/: main.py
